Сделал регистраци, авторизацию. Сохранил токен через библиотеку nookies

--- a/package.json
+++ b/package.json
@@ -23,16 +23,21 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
+    "@reduxjs/toolkit": "^1.8.4",
+    "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "macro-css": "^1.0.5",
     "next": "^12.2.3",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
+    "react-redux": "^8.0.2",
     "sass": "^1.54.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^18.6.4",
     "@types/react": "^18.0.15",
     "eslint": "^8.20.0",
     "eslint-config-next": "^12.2.3",
