--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
     "@reduxjs/toolkit": "^1.8.4",
+    "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "macro-css": "^1.0.5",
     "next": "^12.2.3",
+    "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
