--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "bracketSpacing": true
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.3.0",
     "@editorjs/editorjs": "^2.25.0",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/paragraph": "^2.8.0",
     "@hookform/resolvers": "^2.9.7",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -33,6 +36,7 @@
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-editor-js": "^2.1.0",
     "react-hook-form": "^7.34.0",
     "react-redux": "^8.0.2",
     "sass": "^1.54.0",
