--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@editorjs/checklist": "^1.3.0",
     "@editorjs/editorjs": "^2.25.0",
     "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
     "@editorjs/paragraph": "^2.8.0",
     "@hookform/resolvers": "^2.9.7",
     "@material-ui/core": "^4.12.4",
