--- a/package.json
+++ b/package.json
@@ -8,15 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "bracketSpacing": true
-  },
   "dependencies": {
     "@editorjs/checklist": "^1.3.0",
     "@editorjs/editorjs": "^2.25.0",
@@ -35,6 +26,7 @@
     "next": "^12.2.3",
     "next-redux-wrapper": "^7.0.5",
     "nookies": "^2.5.2",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-editor-js": "^2.1.0",
@@ -44,6 +36,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/node": "^18.6.4",
     "@types/react": "^18.0.15",
     "eslint": "^8.20.0",
