fix: Fixed bags

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_URL='https://tjournal-app.herokuapp.com/'
-NEXT_PUBLIC_LOCAL_URL='http://localhost:6200/'
+NEXT_PUBLIC_URL=https://tjournal-backend.vercel.app
+NEXT_PUBLIC_LOCAL_URL=http://localhost:3001
