--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.8.4",
     "@reduxjs/toolkit": "^1.8.4",
     "@types/react-redux": "^7.1.24",
+    "@vercel/postgres": "^0.3.0",
     "axios": "^0.27.2",
     "clsx": "^1.2.1",
     "macro-css": "^1.0.5",
